# PCBS-BOM-AI-Agent

./: .env.example  .gitignore  Bosch_Hackathon_Test.ipynb  Bosch_Hackathon_refactored.ipynb  LICENSE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  ideas.py  markdown.md  prompt_store.md
backend/: .env.example  .gitignore  Dockerfile  dockerignore  pyproject.toml
backend/app/: llm.py  main.py
backend/app/bom/: logic.py  octopart_client.py  router.py  schemas.py  service.py  tools.py
backend/app/bom/.octopart_cache/: 16ZL680MEFC10X16.json  1N5822-E3%2F73.json  C1608X5R1E105M080AC.json  EEU-FM1E221.json  FC68148+DC10A.json  LM2596T5.0%2FNOPB.json  RLB0914-330KL.json  Texas+Instruments.json
backend/app/production/: __init__.py  logic.py  router.py  schemas.py
backend/app/utils/: prompt.py  tools.py
data/: knowledge_base.md  production_plan_1.csv  temporary_prompt.md
data/01_raw/: octopart.json
data/boms/: bom1.xlsx  bom2.xls  bom3.xlsx  bom4.csv  bom5.xlsx  bom6.xlsx  bom7.xlsx  bom8.xlsx
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css
frontend/src/app/og/: route.tsx
frontend/src/components/: bom-display.tsx  bom-questionnaire.tsx  bom-results-columns.tsx  chat.tsx  data-table.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  navbar.tsx  overview.tsx
frontend/src/hooks/: use-scroll-to-bottom.tsx
frontend/src/lib/: types.ts  utils.ts
