[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai>=1.85.0",
    "instructor>=1.3.3",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "tabulate>=0.9.0",
]

